<resources>


    <string name="app_name">Photosythesis_Home</string>
    <string name="click_to_open">Click to Open</string>
    <string name="previous">Previous</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="favs">Favs</string>
    <string name="water_intake">Water Intake</string>
    <string name="sunlight">sunlight</string>
    <string name="user_history">User History:</string>
    <string name="plantst_that_use_a_medium_amount_of_water">Plantst that Use a Medium Amount of Water:</string>
...
    <string name="DragonTree">Dracaena</string>
    <string name="todo">TODO</string>
    <string name="checkbox">CheckBox</string>
    <string name="search_for_plants">Search for Plants</string>
    <string name="verigated_or_non_verigated">Verigated or Non Verigated</string>
    <string name="button">Button</string>
    <string name="non_verigated">Non Verigated</string>
    <string name="verigated">Verigated</string>
    <string name="is_your_plant_flowering_or_not_flowering">Is your plant flowering or not flowering?</string>
    <string name="flowering">flowering</string>
    <string name="not_flowering">Not Flowering</string>
    <string name="is_your_plant_verigated_or_non_verigated">Is your plant verigated or non verigated?</string>
    <string name="plantList">got here</string>
    <string name="peperomia">Peperomia (Peperomia argyreia)</string>
    <string name="castIron">Cast-Iron</string>
    <string name="ChristmasCactus">Christmas Cactus (Schlumbergera x buckle i)</string>
...
