...
    android:layout_height="match_parent"
    android:background="#52824c"
    tools:context=".Search">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="0dp"
        android:layout_height="156dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="136dp"
...
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            tools:text="Is your plant broadleaf or nonbroadleaf?" />

        <Button
            android:id="@+id/buttonBroadleaf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="47dp"
            android:layout_marginBottom="14dp"
            android:text="Broadleaf"
            android:textAlignment="center"
            tools:text="Broadleaf" />

        <Button
            android:id="@+id/buttonNonBroadleaf"
            android:layout_width="wrap_content"
...
