...
    android:layout_height="match_parent"
    android:background="#52824c"
    tools:context=".searchChecklist"
    tools:layout_editor_absoluteY="81dp">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="127dp"
        android:layout_marginBottom="295dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098">

        <Button
            android:id="@+id/buttonNonVerigated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="28dp"
            android:text="@string/non_verigated"
...
